--- a/packages/app/views/index.html
+++ b/packages/app/views/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <button id="send-btn"> 发送 </button>
+    <button id="send-btn1"> 发送 </button>
     resouce {{ test }}
+
+    <script type="text/javascript">
+        async function send(n) {
+            const data = await fetch('/test?n=' + n);
+
+            const result = await data.text();
+
+            console.log(result);
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('#send-btn').addEventListener('click', () => {
+                [...Array(12)].forEach(() => {
+                    send(1);
+                })
+            })
+
+            document.querySelector('#send-btn1').addEventListener('click', () => {
+                [...Array(12)].forEach(() => {
+                    send(2);
+                })
+            })
+        });
+    </script>
 </body>
 </html>
