style: ursa rename to uma

--- a/packages/app/views/index.html
+++ b/packages/app/views/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ursajs 首页</title>
+    <title>Umajs 首页</title>
 </head>
 <body>
 
 <div style="text-align: center;">
-    <img width="300" height="300" src="https://ursajs.gitee.io/assets/img/ursajs.b4f2d50a.png" />
+    <img width="300" height="300" src="/img/umajs.png" />
     <br/>
     <br/>
     <p1 style="font-size: 36px; font-weight: bolder;">{{ frameName }}</p1>
     <br/>
     <br/>
-    <a href="https://ursajs.gitee.io">USAGE(使用文件点击查看)</a>
+    <a href="https://umajs.gitee.io">USAGE(使用文件点击查看)</a>
 </div>
 </body>
 </html>
