feat: add plugin-i18n

--- a/packages/app/views/index.html
+++ b/packages/app/views/index.html
@@ -15,6 +15,9 @@
     <p1 style="font-size: 36px; font-weight: bolder;">{{ frameName }}</p1>
     <br/>
     <br/>
+    <p1>{{ ctx.i18n.hi }}</p1>
+    <br/>
+    <br/>
     <a href="https://umajs.gitee.io">USAGE(使用文件点击查看)</a>
 </div>
 </body>
